Fixed several quality issues.